3.8 made navbar full width and corrected spacing

--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -4,9 +4,9 @@
   display: inline-block;
 }
 
-.mainNavbar {
-  background: #1d1c1c;
-}
+// .mainNavbar {
+//   background: #1d1c1c;
+// }
 
 body {
   font-family: "Teko", sans-serif !important;
